--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,19 +202,17 @@ blockquote {
 }
 
 pre {
-  padding: 4px;
   white-space: pre-wrap;
 }
 
 code, pre {
-  background-color: #efefef;
   border-radius: 3px;
 }
 
 .badge {
   background: #dedede;
-  padding: 2px 5px;
-  border-radius: 4px;
+  padding: 5px 7px;
+  border-radius: var(--card-radius);
   color: #3f3f3f;
 }
 
