Maybe a little less dark...

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -401,7 +401,7 @@ label {
   :root {
     --main-bg: #202020;
     --main-text: #efefef;
-    --dim-text: #aaa;
+    --dim-text: #bbb;
     --danger-bg: #94282f;
     --success-bg: #328732;
     --info-bg: #3c4043;
