--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -45,7 +45,7 @@
 	</div>
 	<input type="hidden" name="_csrf" value="{{.csrf_token}}" />
 	<br>
-  <p>You will confirm the recipients next.</p>
+  <p class="noBottomMargin">You will confirm the recipients next.</p>
 	<button type="submit" class="btn">Continue</button>
 </form>
 </div>
