--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -1,15 +1,18 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
 <h1 class="noTopMargin">{{.Ticket.Title}}</h1>
-<p><small class="sgrey">{{Len .Ticket.Voters}} Upvotes {{CalcDurationShort .Ticket.CreatedUnix}} ago
-		{{if and (not .Ticket.IsResolved) (not .Upvoted)}}
-		<form method="post" action="/tickets/{{.Ticket.TicketID}}/upvote">
-			<input type="hidden" name="_csrf" value="{{.csrf_token}}">
-			<button type="submit" class="btn">Upvote</button>
-		</form>{{else if .Upvoted}}Upvoted!{{end}}
+{{if and (not .Ticket.IsResolved) (not .Upvoted)}}
+<form method="post" action="/tickets/{{.Ticket.TicketID}}/upvote">
+	<input type="hidden" name="_csrf" value="{{.csrf_token}}">
+	<button type="submit" class="btn upvote">▲ {{Len .Ticket.Voters}} Upvotes</button>
+	&middot;
+	<span class="upvoteInfo">{{CalcDurationShort .Ticket.CreatedUnix}} ago</span>
 
-		{{if .IsAdmin}}<a href="/tickets/{{.Ticket.TicketID}}/edit">[edit]</a>
-		<a href="/tickets/{{.Ticket.TicketID}}/del">[delete]</a>{{end}}</p>
+	{{if .IsAdmin}}<a href="/tickets/{{.Ticket.TicketID}}/edit">[edit]</a>
+	<a href="/tickets/{{.Ticket.TicketID}}/del">[delete]</a>{{end}}</p>
+</form>
+{{else if .Upvoted}}<p class="badge alert-green upvoted">{{Len .Ticket.Voters}} Upvotes</p><span class="upvoteInfo">
+	&middot; {{CalcDurationShort .Ticket.CreatedUnix}} ago</span>{{end}}
 
 <div class="post">{{.FormattedPost}}</div>
 
@@ -17,21 +20,24 @@
 {{if not .Resolved}}<form method="post">
 	<div class="col-5">
 		<div class="form-group">
-			<textarea class="form-item" name="text" cols="40" rows="4" required="1"></textarea>
+			<textarea class="form-item" name="text" cols="40" rows="4" required="1" placeholder="Plain text only"></textarea>
 		</div>
 		<input type="hidden" name="_csrf" value="{{.csrf_token}}">
 		<button type="submit" class="btn">Comment</button>
 	</div>
 </form>
-<br>{{end}}
-
-{{range .Ticket.Comments}}
-<div class="comment">
-	<p id="c-{{.CommentID}}"><small class="sgrey">
-			{{.PosterID}} {{CalcDurationShort .CreatedUnix}} ago
-			{{if $.IsAdmin }}<a href="/tickets/{{$.Ticket.TicketID}}/del/{{.CommentID}}">[delete]</a>{{end}}
-		</small></p>
-	<div>{{.Text}}</div>
-</div>
+<br>
 {{end}}
+
+<div class="comments col-7">
+	{{range .Ticket.Comments}}
+	<div class="comment">
+		<p id="c-{{.CommentID}}" class="commentInfo">
+			{{.PosterID}} &middot; {{CalcDurationShort .CreatedUnix}} ago
+			{{if $.IsAdmin }}<a href="/tickets/{{$.Ticket.TicketID}}/del/{{.CommentID}}">[delete]</a>{{end}}
+		</p>
+		<p class="commentText">{{.Text}}</p>
+	</div>
+	{{end}}
+</div>
 {{template "base/footer" .}}
