Added top margin back to <h1> > Privacy policy typo > Login and login verification page visuals

--- a/templates/complaints-confirm.html
+++ b/templates/complaints-confirm.html
@@ -1,6 +1,6 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
-<h1 class="noTopMargin">Confirm</h1>
+<h1>Confirm</h1>
 <div class="col-8">
 	<p>Please confirm your ticket below, as this is what we will see.</p>
 
