--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -1,7 +1,7 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
-<h1 class="noTopMargin">Submit a Complaint</h1>
-<div class="col-6">
+<h1>Submit a Complaint</h1>
+<div class="col-8">
 	<p>You to submit a private complaint directly to the class
 		representatives. If you'd like to make a public ticket, <a href="/tickets">visit the tickets page</a>.
 	</p>
@@ -10,7 +10,7 @@
   to the university, unless you specify otherwise.</p>
 </div>
 <form method="post">
-	<div class="col-10">
+	<div class="col-8">
 		<div class="form-group">
 			<label for="category">
 				<h3 class="noBottomMargin">Category</h3>
