--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,6 +1,6 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
-<h1 class="noTopMargin">{{.Title}}</h1>
+<h1>{{.Title}}</h1>
 
 <div class="card-grid">
 	{{ range .Courses }}
