--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,5 +1,5 @@
 {{template "base/head" .}}
-<h1 class="noTopMargin">Privacy Policy</h1>
+<h1>Privacy Policy</h1>
 
 <p>To facilitate the ability of users to vote, we create a unique 'voter ID',
 which is generated using the following information:</p>
@@ -12,7 +12,7 @@ which is generated using the following information:</p>
 
 <p>An irreversable <a href="https://en.wikipedia.org/wiki/Cryptographic_hash_function"
   target="_blank">cryptographic hash</a> is created using this information in
-order to roughly identify a user, allowing us to track of upvotes without
+order to roughly identify a user, allowing us to keep track of upvotes without
 de-anonymising users. This hash is not linked with your session.</p>
 
 <p>On the <a href="/complaints">complaints page</a>, users may leave an email
