--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -1,6 +1,6 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
-<h1 class="noTopMargin">Tickets</h1>
+<h1>Tickets</h1>
 <a href="/tickets/new" class="btn">New Ticket</a>
 {{range .Tickets}}
 
