--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -3,9 +3,13 @@
 <br>
 <br>
 <div class="footer">
+  {{if not .LoggedIn}}
+  <span><a href="/login">Login</a></span>
+  {{end}}
+  &middot;
   {{if .LoggedIn}}<p>You are logged in as {{.User.Name}}. <a
    href="/logout">Logout?</a></p>{{end}}
-  <p><a href="/privacy">Privacy</a></p>
+  <span><a href="/privacy">Privacy</a></span>
 	<p>This website is unaffiliated with Heriot-Watt University.</p>
 </div>
 </div>
