--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,15 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
-<h2>Login</h2>
+<h1>Login</h1>
+<br>
 <form method="post">
   <div class="col-5">
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="text" id="email" name="email" required="1" size="8"
-      autofocus="1">{{.UniEmailDomain}}
+      <label for="email">Email: &MediumSpace;</label>
+      <input type="text" id="email" name="email" required="1" size="8" autofocus="1">&MediumSpace; {{.UniEmailDomain}}
     </div>
     <input type="hidden" name="_csrf" value="{{.csrf_token}}">
-    <button type="submit" class="btn">Continue →</button>
+    <button type="submit" class="btn">Continue</button>
   </div>
 </form>
 {{template "base/footer" .}}
-
