--- a/templates/new-ticket.html
+++ b/templates/new-ticket.html
@@ -1,6 +1,6 @@
 {{template "base/head" .}}
 	{{template "partials/flash" .}}
-	<h1 class="noTopMargin">Post a New Ticket</h1>
+	<h1>Post a New Ticket</h1>
 	<form method="post">
 		<div class="col-10">
 			<div class="form-group">
