--- a/templates/lecturers.html
+++ b/templates/lecturers.html
@@ -12,5 +12,9 @@
     <p><i>Last Updated: {{.Updated}}</i></p>
   </div>
   {{end}}
+  <div class="card alert-yellow">
+    <h3 class="noTopMargin">Note</h3>
+    <p>The information on this page may be out of date or incorrect.</p>
+  </div>
 </div>
 {{template "base/footer" .}}
