Added col-7 to ticket description

--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -22,7 +22,7 @@
 
 	</p>
 
-	<div class="post">{{.FormattedPost}}</div>
+	<div class="post col-7">{{.FormattedPost}}</div>
 
 	<h3>Comments</h3>
 	{{if not .Resolved}}<form method="post">
