Added categorisation of tickets

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -8,7 +8,7 @@
   {{end}}
   {{if .LoggedIn}}<span><a href="/config">Configure</a></span> &middot; <span>You are logged in as {{.User.Name}}. <a href="/logout">Logout?</a></span>{{end}}
   <span> &middot; <a href="/privacy">Privacy</a></span>
-  <p>This website is unaffiliated with Heriot-Watt University.</p>
+  <p>This website is not affiliated with Heriot-Watt University.</p>
 </div>
 </div>
 </body>
