Added no script button

--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -14,9 +14,9 @@
 			<option value="{{.Code}}">{{.Name}} ({{.Code}})</option>
 			{{end}}
 		</select>
-		<!-- <noscript> -->
+		<noscript>
 			<button type="submit" class="btn">Sort</button>
-		<!-- </noscript> -->
+		</noscript>
 	</div>
 </form>
 {{range .Tickets}}
