Implmented saving config and resolving tickets.

--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -35,7 +35,7 @@
 				<h3 class="noBottomMargin">Message</h3>
 			</label>
 			<textarea class="form-item" id="message" name="message" cols="70" rows="20"
-				placeholder="Markdown and HTML are supported" required="1">{{if .ptext}}{{.ptext}}{{end}}</textarea>
+				placeholder="Plain text only" required="1">{{if .ptext}}{{.ptext}}{{end}}</textarea>
 		</div>
 		<div class="form-group">
 			<label for="email">
